# cmake-project

./: .clang-format  .gitignore  CMakeLists.txt  arm.toolchain.cmake  azure-pipelines.yml  cmake-project.h.in  options.cmake
code/: CMakeLists.txt  main.c
code/inc/: product.h  summation.h
code/src/: product.c  summation.c
libs/: CMakeLists.txt
libs/mymath/: CMakeLists.txt
libs/mymath/inc/: mymath.h
